sumo/tests/traci/VariableRetrieval/POI/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 0xa7 0x45 xxx
simstep 6 1
